@@ -1,9 +1,10 @@
 package com.app.security.service;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import com.app.auth.entity.User;
@@ -24,8 +25,8 @@ public class CustomUserDetails implements UserDetails {
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
 
-		// Empty for now
-		return Collections.emptyList();
+		return List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().getName().name()));
+
 	}
 
 	@Override
